--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,23 @@
       <ul class="nav navbar-nav navbar-left">
         <li><%= link_to t('menu.new_article'), new_article_path %></li>
       </ul>
+
+      <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <%= t('menu.languages.lang') %>
+            <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu" role="menu">
+            <li>
+              <%= link_to t('menu.languages.en'), change_locale_path(:en) %>
+            </li>
+            <li>
+              <%= link_to t('menu.languages.ru'), change_locale_path(:ru) %>
+            </li>
+          </ul>
+        </li>
+      </ul>
     </div>
   </div>
 
